--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint .",
     "preview": "vite preview",
     "lighthouse": "lighthouse http://localhost:5173 --view --output-path=./lighthouse-report.html",
     "axe": "axe http://localhost:5173 --save ./accessibility-report.json",
@@ -20,7 +20,7 @@
     "@stripe/stripe-js": "^7.0.0",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.14.1",
-    "framer-motion": "^12.6.3",
+    "framer-motion": "^12.9.2",
     "fuse.js": "^7.1.0",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
@@ -34,7 +34,8 @@
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
