--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview",
     "lighthouse": "lighthouse http://localhost:5173 --view --output-path=./lighthouse-report.html",
     "axe": "axe http://localhost:5173 --save ./accessibility-report.json",
-    "analyze": "vite-bundle-analyzer"
+    "analyze": "vite-bundle-analyzer",
+    "optimize-images": "node scripts/image-optimizer.js",
+    "audit": "npm run lighthouse && npm run axe && npm run optimize-images"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -19,7 +21,7 @@
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.0.0",
     "emailjs-com": "^3.2.0",
-    "firebase": "^10.14.1",
+    "firebase": "^9.23.0",
     "framer-motion": "^12.9.2",
     "fuse.js": "^7.1.0",
     "i18next": "^24.2.3",
@@ -31,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
@@ -43,10 +46,12 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "axe-cli": "^3.2.0",
+    "chalk": "^4.1.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "glob": "^10.4.5",
     "lighthouse": "^9.6.8",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
